<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProcrastinationX</string>
    
    <string name="no_data">No data</string>
    
    <string name="manage">FolderView</string>
    <string name="browse">Notes</string>
    <string name="doodle">Doodle</string>
    
    <string name="new_item">New</string>
    <string name="sort">Sort</string>
    <string name="settings">Settings</string>
    
    <string name="note">Note</string>
    <string name="checklist">Checklist</string>
    <string name="snapshot">Snapshot</string>
   <string name="audiomemo">Audio Memo</string>
   <string name="countdown">Count Down</string>
   <string name="helpcontent">Please visit yichen.ProcrastinationX.com/help for more information. For help with Navigation or Login, please visit yichen.ProcrastinationX.com/nav. - </string>
    
    
    <string name="done">Done</string>
    <string name="title">Title</string>
    
    <string name="go">Go</string>
    
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="setreminder">Set reminder</string>
    <string name="delete_repeating">Delete repeating</string>
    <string name="delete_all">Delete all</string>
     <!-- sliding Menu Items -->
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <!-- action bar right menu item -->
    <string name="help">Help</string>
    <string name="location">Location Reminder</string>
    <string name="share">Share</string>
    <string name="more">More</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
     <string name="details_alarm_name">Alarm Name</string>
	<string name="details_repeat_weekly">Repeat Weekly</string>
	<string name="details_sunday">Sunday</string>
	<string name="details_monday">Monday</string>
	<string name="details_tuesday">Tuesday</string>
	<string name="details_wednesday">Wednesday</string>
	<string name="details_thursday">Thursday</string>
	<string name="details_friday">Friday</string>
	<string name="details_saturday">Saturday</string>
	<string name="details_alarm_tone">Alarm Tone</string>
	<string name="details_alarm_tone_default">Select an alarm tone</string>
    
    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Home || ProcainationX</item>
        <item >Find People ll TodoList</item>
        <item >Photos ll Reminder</item>
        <item >Communities ll alarm reminder</item>
        <item >Pages ll location reminder</item>
        <item >What\'s Hot ll next</item>
    </string-array>
    
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
    </array>
    
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    
    <!-- alarm manager -->
    <string name="menu_settings">Settings</string>
    <string name="title_activity_alarm_manager">AlarmManagerExample</string>
	<string name="btCancel">Cancel Repeating Timer</string>
	<string name="btStart">Start Repeating Timer</string>
	<string name="btOneTime">One-time Timer</string>
    
	<!-- voice to test -->
    <string name="btSpeak">Speak</string>
    <string name="title_activity_voice_recognition">Voice Recognition</string>
    <string name="tvTextMatches">Text Matches</string>
    <string name="sNoOfMatches">No of Matches</string>
    <string name="etSearchHint">Speech hint here</string>
    <string-array name="saNoOfMatches">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    
</resources>